Recipe info completed and template is now structured

--- a/recipes/Chocolate_marquise.html
+++ b/recipes/Chocolate_marquise.html
@@ -8,7 +8,50 @@
 </head>
 <body>
     <h1>Chocolate Marquise</h1>
-    <img src="" alt="">
+    <img src="../images/marquise.jpeg" alt="Marquise">
+    <h2>Description</h2>
+    
+    <p>Tasteful dessert made of Marie cookies and chocolate ganache to share with the fam. No need of baking and easily made. The iced cake made to please! </p>
+
+    <br>
+    <h2>Ingredients</h2>
+    <ul>
+
+        <li>2 packages of classic Marie cookies</li>
+        <li>1/4 liter of milk</li>
+        <li>2 tablets of milk chocolate</li>
+        <li>1 egg yolk</li>
+        <li>1 can of condensed milk</li>
+        <li>A medium sized container</li>
+
+    </ul>
+
+    <br>
+
+    <h2>Steps</h2>
+
+    <ol>
+
+        <li>Boil water on a litle pot. </li>
+        <li>Put a bigger pot over the boiling one and add the chocolate on pieces until it melts.</li>
+        <li>Turn off the stove and mix the condensed milk and the egg yolk with the chocolate.</li>
+        <li>Wait until the chocolate is room temperature, and pour the milk on a different container.</li>
+        <li>Pour a first layer of chocolate on the marquise container. </li>
+        <li>Dip the marie cookies on milk until they are soft but don`t break.</li>
+        <li>Create a layer of cookies over the other layer.</li>
+        <li>Repeat the layering of chocolate and cookies.</li>
+        <li>Save some melted chocolate for the top layer of the dessert.</li>
+        <li>Keep on the fridge until the dessert gets less liquid.</li>
+
+
+
+
+    </ol>
+
+
+
+
+
     
 </body>
 </html>
